More style changes

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Hello, Blockstack!</title>
+  <title>Notarius</title>
   <link rel="stylesheet" href="bootstrap.min.css" />
   <link rel="stylesheet" href="app.css" />
   <script src="bundle.js"></script>
@@ -11,12 +11,15 @@
   <div class="site-wrapper">
     <div class="site-wrapper-inner">
       <div class="panel-landing" id="section-1">
-        <h1 class="landing-heading">Hello, Blockstack!</h1>
+        <h1 class="landing-heading">Welcome to Notarius, a decentralized notary service.</h1>
         <p class="lead">
           <a href="#" class="btn btn-primary btn-lg" id="signin-button">
             Sign In with Blockstack
           </a>
         </p>
+      </div>
+      <div class="panel-landing" id="section-2">
+         <img src="img/feather_medium.png" alt="quill">
       </div>
       <div class="panel-welcome hide" id="section-2">
         <div class="avatar-section">
