More style changes

--- a/public/index.html
+++ b/public/index.html
@@ -10,18 +10,20 @@
 <body>
   <div class="site-wrapper">
     <div class="site-wrapper-inner">
-      <div class="panel-landing" id="section-1">
-        <h1 class="landing-heading">Welcome to Notarius, a decentralized notary service.</h1>
-        <p class="lead">
-          <a href="#" class="btn btn-primary btn-lg" id="signin-button">
-            Sign In with Blockstack
-          </a>
-        </p>
-      </div>
-      <div class="panel-landing" id="section-2">
-         <img src="img/feather_medium.png" alt="quill">
-      </div>
-      <div class="panel-welcome hide" id="section-2">
+        <div class="row">
+            <div class="col-xs-6" id="section-1">
+                <img src="img/feather_medium.png" alt="quill">
+            </div>
+            <div class="col-xs-6" id="section-2">
+            <h1 class="landing-heading">Welcome to Notarius, a decentralized notary service.</h1>
+            <p class="lead">
+              <a href="#" class="btn btn-primary btn-lg" id="signin-button">
+                Sign In with Blockstack
+              </a>
+            </p>
+            </div>
+        </div>
+      <div class="panel-welcome hide" id="section-3">
         <div class="avatar-section">
           <img src="https://s3.amazonaws.com/onename/avatar-placeholder.png" class="img-rounded avatar" id="avatar-image">
         </div>
