More style changes

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <div class="site-wrapper-inner">
         <div class="row">
             <div class="col-xs-6" id="section-1">
-                <img src="img/feather_medium.png" alt="quill">
+                <img src="img/feather_medium.png" width="20%" height="20% alt="quill">
             </div>
             <div class="col-xs-6" id="section-2">
             <h1 class="landing-heading">Welcome to Notarius, a decentralized notary service.</h1>
