--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,9 @@
     <div class="site-wrapper-inner">
         <div class="row">
             <div class="col-xs-6" id="section-1">
-                <img src="img/feather_medium.png" width="40%" height="40% alt="quill">
             </div>
             <div class="col-xs-6" id="section-2">
-            <h1 class="landing-heading">Welcome to Notarius, a decentralized notary service.</h1>
+            <h1 class="landing-heading"><img src="img/quill.png" width="20%" height="20% alt="quill">Welcome to Notarius, a decentralized notary service.</h1>
             <p class="lead">
               <a href="#" class="btn btn-primary btn-lg" id="signin-button">
                 Sign In with Blockstack
