More style changes

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <div class="site-wrapper-inner">
         <div class="row">
             <div class="col-xs-6" id="section-1">
+                <img src="img/skyline.png" width="60%" height="60% alt="quill">
             </div>
             <div class="col-xs-6" id="section-2">
             <h1 class="landing-heading"><img src="img/quill.png" width="20%" height="20% alt="quill">Welcome to Notarius, a decentralized notary service.</h1>
