More style changes

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="site-wrapper">
     <div class="site-wrapper-inner">
-        <div class="row">
+        <div class="jumbotron">
             <div class="col-xs-4" id="section-1">
                 <img src="img/skyline.png" width="60%" height="60% alt="quill">
             </div>
