More style changes

--- a/public/index.html
+++ b/public/index.html
@@ -10,20 +10,22 @@
 <body>
   <div class="site-wrapper">
     <div class="site-wrapper-inner">
-        <div class="jumbotron">
-            <div class="col-xs-4" id="section-1">
-                <img src="img/skyline.png" width="60%" height="60% alt="quill">
-            </div>
-            <div class="col-xs-6" id="section-2">
-                <h1>
-                    <img src="img/quill.png" width="20%" height="20%" alt="quill">
-                    Welcome to Notarius, a decentralized notary service.
-                </h1>
-            <p class="lead">
-              <a href="#" class="btn btn-primary btn-lg" id="signin-button">
-                Sign In with Blockstack
-              </a>
-            </p>
+        <div class="container-fluid">
+            <div class="row-fluid">
+                <div class="span4" id="section-1">
+                    <img src="img/skyline.png" width="60%" height="60% alt="quill">
+                </div>
+                <div class="span6" id="section-2">
+                    <h1
+                        <img src="img/quill.png" width="20%" height="20%" alt="quill">
+                        Welcome to Notarius, a decentralized notary service.
+                    </h1>
+                <p class="lead">
+                  <a href="#" class="btn btn-primary btn-lg" id="signin-button">
+                    Sign In with Blockstack
+                  </a>
+                </p>
+                </div>
             </div>
         </div>
       <div class="panel-welcome hide" id="section-3">
