--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,10 @@
         <div class="container-fluid">
             <div class="row-fluid">
                 <div class="span2" id="section-1">
-                    <img src="img/skyline.png" width="40%" height="40% alt="quill">
+                    <img src="img/skyline.png" width="40%" height="40%" alt="quill">
                 </div>
                 <div class="span6" id="section-2">
-                    <h1
+                    <h1>
                         <img src="img/quill.png" width="20%" height="20%" alt="quill">
                         Welcome to Notarius, a decentralized notary service.
                     </h1>
