--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="site-wrapper">
-    <div class="site-wrapper-inner">
+    <!--<div class="site-wrapper-inner">-->
         <div class="container-fluid">
             <div class="row-fluid">
                 <div class="span2" id="section-1">
@@ -20,11 +20,11 @@
                         <img src="img/quill.png" width="10%" height="10%" alt="quill">
                         Welcome to Notarius, a decentralized notary service.
                     </h1>
-                <p class="lead">
-                  <a href="#" class="btn btn-primary btn-lg" id="signin-button">
-                    Sign In with Blockstack
-                  </a>
-                </p>
+                    <p class="lead">
+                      <a href="#" class="btn btn-primary btn-lg" id="signin-button">
+                        Sign In with Blockstack
+                      </a>
+                    </p>
                 </div>
             </div>
         </div>
@@ -39,7 +39,7 @@
           </a>
         </p>
       </div>
-    </div>
+    <!--</div>-->
   </div>
 </body>
 </html>
