--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <script src="app.js"></script>
 </head>
 <body>
-  <div class="site-wrapper">
+  <!--<div class="site-wrapper">-->
     <!--<div class="site-wrapper-inner">-->
         <div class="container-fluid">
             <div class="row-fluid">
@@ -27,19 +27,19 @@
                     </p>
                 </div>
             </div>
+            <div class="panel-welcome hide" id="section-3">
+            <div class="avatar-section">
+              <img src="https://s3.amazonaws.com/onename/avatar-placeholder.png" class="img-rounded avatar" id="avatar-image">
+            </div>
+            <h1>Hello, <span id="heading-name">Anonymous</span>!</h1>
+            <p class="lead">
+              <a href="#" class="btn btn-primary btn-lg" id="signout-button">
+                Logout
+              </a>
+            </p>
+            </div>
         </div>
-      <div class="panel-welcome hide" id="section-3">
-        <div class="avatar-section">
-          <img src="https://s3.amazonaws.com/onename/avatar-placeholder.png" class="img-rounded avatar" id="avatar-image">
-        </div>
-        <h1>Hello, <span id="heading-name">Anonymous</span>!</h1>
-        <p class="lead">
-          <a href="#" class="btn btn-primary btn-lg" id="signout-button">
-            Logout
-          </a>
-        </p>
-      </div>
     <!--</div>-->
-  </div>
+  <!--</div>-->
 </body>
 </html>
