--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <title>Notarius</title>
   <link rel="stylesheet" href="bootstrap.min.css" />
   <link rel="stylesheet" href="app.css" />
+  <link rel="shortcut icon" type="image/png" href="img/quill.png">
   <script src="bundle.js"></script>
   <script src="app.js"></script>
 </head>
