--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <title>Notarius</title>
   <link rel="stylesheet" href="bootstrap.min.css" />
   <link rel="stylesheet" href="app.css" />
-  <link rel="shortcut icon" type="image/png" href="img/quill.png">
+  <link rel="shortcut icon" type="image/png" href="img/Notary.png">
   <script src="bundle.js"></script>
   <script src="app.js"></script>
 </head>
@@ -14,14 +14,9 @@
         <div class="container-fluid">
             <div class="row-fluid">
                 <div class="span4" id="section-1">
-                    <img src="img/skyline.png" width="20%" height="20%" alt="quill">
+                    <img src="img/Notary.png" width="35%" height="35%" alt="quill">
                 </div>
                 <div class="span8" id="section-2">
-                    <h2>
-                        Welcome to Notarius, a decentralized notary service.
-                        <br>
-                        <img src="img/quill.png" width="3%" height="3%" alt="quill">
-                    </h2>
                     <p class="lead">
                       <a href="#" class="btn btn-primary btn-lg" id="signin-button">
                         Sign In with Blockstack
