--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,48 @@
   <title>Notarius</title>
   <link rel="stylesheet" href="bootstrap.min.css" />
   <link rel="stylesheet" href="app.css" />
-  <link rel="shortcut icon" type="image/png" href="img/Notary.png">
+  <link rel="shortcut icon" type="image/png" href="img/Notary.png"/>
   <script src="bundle.js"></script>
   <script src="app.js"></script>
-</head>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 <body>
-  <!--<div class="site-wrapper">-->
-    <!--<div class="site-wrapper-inner">-->
-        <div class="container-fluid">
-            <div class="row-fluid">
-                <div class="span4" id="section-1">
-                    <img src="img/Notary.png" width="35%" height="35%" alt="quill">
+  <!--<div class="carousel">-->
+        <div class="container">
+          <div class"row">
+            <section class="col-sm-12">
+                <div class="carousel slide" id="feature" data-ride="carousel" data-interval="false">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img class="img-fluid" src="img/Notary.png" width="35%" height="35%" alt="quill">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="img-fluid" src="img/Blockstack.png" width="35%" height="35%" alt="quill">
+                      <h2>No trusted third parties</h2>
+                    </div>
+                    <div class="carousel-item">
+                    <img class="img-fluid" src="img/Blockstackid.png" width="35%" height="35%" alt="quill">
+                      <h2>Sign with Blockstack ID & Private Key</h2>
+                    </div>
                 </div>
+              </div>
+
+                <a class="carousel-control-prev" href="#feature"
+                  role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true">
+                  <span class="sr-only">Previous</span>
+                </span>
+                </a>
+
+                <a class="carousel-control-next" href="#feature"
+                  role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true">
+                  <span class="sr-only">Previous</span>
+                </span>
+                </a>
+              </div>
+          </div>
                 <div class="span8" id="section-2">
                     <p class="lead">
                       <a href="#" class="btn btn-primary btn-lg" id="signin-button">
@@ -24,6 +54,23 @@
                     </p>
                 </div>
             </div>
+  <!--<div class="End Carousel">-->
+  <!--<div class="Sign-In Button">-->
+            <div class="panel-welcome hide" id="section-3">
+            <div class="avatar-section">
+              <img src="https://s3.amazonaws.com/onename/avatar-placeholder.png" class="img-rounded avatar" id="avatar-image">
+            </div>
+            <h1>Hello, <span id="heading-name">Anonymous</span>!</h1>
+            <p class="lead">
+              <a href="#" class="btn btn-primary btn-lg" id="signout-button">
+                Logout
+              </a>
+            </p>
+            </div>
+        </div>
+   <!--<div class="End Sign-In Button">-->
+</body>
+</html>
             <div class="panel-welcome hide" id="section-3">
             <div class="avatar-section">
               <img src="https://s3.amazonaws.com/onename/avatar-placeholder.png" class="img-rounded avatar" id="avatar-image">
