--- a/public/index.html
+++ b/public/index.html
@@ -12,76 +12,62 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 <body>
   <!--<div class="carousel">-->
-        <div class="container">
-          <div class"row">
+    <div class="container">
+        <div class="row">
             <section class="col-sm-12">
                 <div class="carousel slide" id="feature" data-ride="carousel" data-interval="false">
-                  <div class="carousel-inner">
-                    <div class="carousel-item active">
-                      <img class="img-fluid" src="img/Notary.png" width="35%" height="35%" alt="quill">
-                    </div>
-                    <div class="carousel-item">
-                      <img class="img-fluid" src="img/Blockstack.png" width="35%" height="35%" alt="quill">
-                      <h2>No trusted third parties</h2>
-                    </div>
-                    <div class="carousel-item">
-                    <img class="img-fluid" src="img/Blockstackid.png" width="35%" height="35%" alt="quill">
-                      <h2>Sign with Blockstack ID & Private Key</h2>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img class="img-fluid" src="img/Notary.png" width="35%" height="35%" alt="quill">
+                        </div>
+                        <div class="carousel-item">
+                          <img class="img-fluid" src="img/Blockstack.png" width="35%" height="35%" alt="quill">
+                          <h2>No trusted third parties</h2>
+                        </div>
+                        <div class="carousel-item">
+                        <img class="img-fluid" src="img/Blockstackid.png" width="35%" height="35%" alt="quill">
+                          <h2>Sign with Blockstack ID & Private Key</h2>
+                        </div>
                     </div>
                 </div>
-              </div>
 
-                <a class="carousel-control-prev" href="#feature"
-                  role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true">
-                  <span class="sr-only">Previous</span>
-                </span>
+                <a class="carousel-control-prev" href="#feature" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true">
+                        <span class="sr-only">Previous</span>
+                    </span>
                 </a>
 
-                <a class="carousel-control-next" href="#feature"
-                  role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true">
-                  <span class="sr-only">Previous</span>
-                </span>
+                <a class="carousel-control-next" href="#feature" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true">
+                        <span class="sr-only">Previous</span>
+                    </span>
                 </a>
-              </div>
-          </div>
-                <div class="span8" id="section-2">
-                    <p class="lead">
-                      <a href="#" class="btn btn-primary btn-lg" id="signin-button">
-                        Sign In with Blockstack
-                      </a>
-                    </p>
-                </div>
-            </div>
-  <!--<div class="End Carousel">-->
-  <!--<div class="Sign-In Button">-->
-            <div class="panel-welcome hide" id="section-3">
-            <div class="avatar-section">
-              <img src="https://s3.amazonaws.com/onename/avatar-placeholder.png" class="img-rounded avatar" id="avatar-image">
-            </div>
-            <h1>Hello, <span id="heading-name">Anonymous</span>!</h1>
-            <p class="lead">
-              <a href="#" class="btn btn-primary btn-lg" id="signout-button">
-                Logout
-              </a>
-            </p>
-            </div>
+            </section>
         </div>
+    </div>
+    <div class="span8" id="section-2">
+        <p class="lead">
+            <a href="#" class="btn btn-primary btn-lg" id="signin-button">
+                Sign In with Blockstack
+            </a>
+        </p>
+    </div>
+    <!--<div class="End Carousel">-->
+
+    <!--<div class="Sign-In Button">-->
+    <div class="panel-welcome hide" id="section-3">
+    <div class="avatar-section">
+    <img src="https://s3.amazonaws.com/onename/avatar-placeholder.png" class="img-rounded avatar" id="avatar-image">
+    </div>
+    <h1>Hello, <span id="heading-name">Anonymous</span>!</h1>
+    <p class="lead">
+    <a href="#" class="btn btn-primary btn-lg" id="signout-button">
+    Logout
+    </a>
+    </p>
+    </div>
+    </div>
    <!--<div class="End Sign-In Button">-->
-            <div class="panel-welcome hide" id="section-3">
-            <div class="avatar-section">
-              <img src="https://s3.amazonaws.com/onename/avatar-placeholder.png" class="img-rounded avatar" id="avatar-image">
-            </div>
-            <h1>Hello, <span id="heading-name">Anonymous</span>!</h1>
-            <p class="lead">
-              <a href="#" class="btn btn-primary btn-lg" id="signout-button">
-                Logout
-              </a>
-            </p>
-            </div>
-        </div>
-    <!--</div>-->
-  <!--</div>-->
+
 </body>
 </html>
