Removed duplicate <div> elements in index.html and added section closing tag.

--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
                     </a>
                 </p>
             </div>
-            <!--<div class="End Sign-In Button">-->
+            <!--<div class="End Sign-out Button">-->
         </div>
         <!--<div class="End Container">-->
     </body>
