--- a/public/index.html
+++ b/public/index.html
@@ -23,14 +23,14 @@
                     <div class="carousel slide" id="feature" data-ride="carousel" data-interval="false">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                              <img class="img-fluid" src="img/Notary.png" width="35%" height="35%">
+                              <img class="img-fluid" src="img/Notary.png" width="450px" height="450px">
                             </div>
                             <div class="carousel-item">
-                              <img class="img-fluid" src="img/Blockstack.png" width="35%" height="35%">
+                              <img class="img-fluid" src="img/Blockstack.png" width="450px" height="450px">
                               <h2>No trusted third parties</h2>
                             </div>
                             <div class="carousel-item">
-                            <img class="img-fluid" src="img/Blockstackid.png" width="35%" height="35%">
+                            <img class="img-fluid" src="img/Blockstackid.png" width="450px" height="450px">
                               <h2>Sign with Blockstack ID & Private Key</h2>
                             </div>
                         </div>
@@ -44,7 +44,7 @@
 
                     <a class="carousel-control-next" href="#feature" role="button" data-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true">
-                            <span class="sr-only">Previous</span>
+                            <span class="sr-only">Next</span>
                         </span>
                     </a>
                 </section>
