Removed duplicate <div> elements in index.html and added section closing tag.

--- a/public/index.html
+++ b/public/index.html
@@ -26,12 +26,12 @@
                               <img class="img-fluid" src="img/Notary.png" width="450px" height="450px">
                             </div>
                             <div class="carousel-item">
-                              <img class="img-fluid" src="img/Blockstack.png" width="450px" height="450px">
-                              <h2>No trusted third parties</h2>
+                                <img class="img-fluid" src="img/Blockstack.png" width="450px" height="450px">
+                                <h2>No trusted third parties</h2>
                             </div>
                             <div class="carousel-item">
-                            <img class="img-fluid" src="img/Blockstackid.png" width="450px" height="450px">
-                              <h2>Sign with Blockstack ID & Private Key</h2>
+                                <img class="img-fluid" src="img/Blockstackid.png" width="450px" height="450px">
+                                <h2>Sign with Blockstack ID & Private Key</h2>
                             </div>
                         </div>
                     </div>
@@ -50,32 +50,36 @@
                 </section>
                 <!--<div class="End Carousel">-->
             </div>
-            <!--<div class="End Row">-->
+            <!--<div class="Row">-->
+            <div class="row">
 
-            <!--<div class="Sign-In Button">-->
-            <div class="span8" id="section-2">
-                <p class="lead">
-                    <a href="#" class="btn btn-primary btn-lg" id="signin-button">
-                        Sign In with Blockstack
-                    </a>
-                </p>
-            </div>
-            <!--<div class="End Sign-In Button">-->
-
-            <!--<div class="Sign-out Button">-->
-            <div class="panel-welcome hide" id="section-3">
-                <div class="avatar-section">
-                    <img src="https://s3.amazonaws.com/onename/avatar-placeholder.png" class="img-rounded avatar" id="avatar-image">
+                <!--<div class="Sign-In Button">-->
+                <div class="span8" id="section-2">
+                    <p class="lead">
+                        <a href="#" class="btn btn-primary btn-lg" id="signin-button">
+                            Sign In with Blockstack
+                        </a>
+                    </p>
                 </div>
-                <h1>Hello, <span id="heading-name">Anonymous</span>!</h1>
-                <p class="lead">
-                    <a href="#" class="btn btn-primary btn-lg" id="signout-button">
-                        Logout
-                    </a>
-                </p>
+                <!--<div class="End Sign-In Button">-->
+
+                <!--<div class="Sign-out Button">-->
+                <div class="panel-welcome hide" id="section-3">
+                    <div class="avatar-section">
+                        <img src="https://s3.amazonaws.com/onename/avatar-placeholder.png" class="img-rounded avatar" id="avatar-image">
+                    </div>
+                    <h1>Hello, <span id="heading-name">Anonymous</span>!</h1>
+                    <p class="lead">
+                        <a href="#" class="btn btn-primary btn-lg" id="signout-button">
+                            Logout
+                        </a>
+                    </p>
+                </div>
+                <!--<div class="End Sign-out Button">-->
             </div>
-            <!--<div class="End Sign-out Button">-->
+                <!--<div class="End Row">-->
         </div>
         <!--<div class="End Container">-->
+
     </body>
 </html>
