Removed duplicate <div> elements in index.html and added section closing tag.

--- a/public/index.html
+++ b/public/index.html
@@ -23,14 +23,14 @@
                     <div class="carousel slide" id="feature" data-ride="carousel" data-interval="false">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                              <img class="img-fluid" src="img/Notary.png" width="450px" height="450px">
+                              <img class="img-fluid" src="img/Notary.png" width="35%" height="35%">
                             </div>
                             <div class="carousel-item">
-                                <img class="img-fluid" src="img/Blockstack.png" width="450px" height="450px">
+                                <img class="img-fluid" src="img/Blockstack.png" width="35%" height="35%">
                                 <h2>No trusted third parties</h2>
                             </div>
                             <div class="carousel-item">
-                                <img class="img-fluid" src="img/Blockstackid.png" width="450px" height="450px">
+                                <img class="img-fluid" src="img/Blockstackid.png" width="35%" height="35%">
                                 <h2>Sign with Blockstack ID & Private Key</h2>
                             </div>
                         </div>
