--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         <div class="container">
 
             <!--<div class="Row">-->
-            <div class="row">
+            <div class="row" id="section-1">
 
                 <!--<div class="Carousel">-->
                 <section class="col-sm-12">
