--- a/public/index.html
+++ b/public/index.html
@@ -49,31 +49,32 @@
                     </a>
                 </section>
                 <!--<div class="End Carousel">-->
-                <!--<div class="Sign-In Button">-->
-                <div class="span8" id="section-2">
-                    <p class="lead">
-                        <a href="#" class="btn btn-primary btn-lg" id="signin-button">
-                            Sign In with Blockstack
-                        </a>
-                    </p>
-                </div>
-                <!--<div class="End Sign-In Button">-->
-
-                <!--<div class="Sign-out Button">-->
-                <div class="panel-welcome hide" id="section-3">
-                    <div class="avatar-section">
-                        <img src="https://s3.amazonaws.com/onename/avatar-placeholder.png" class="img-rounded avatar" id="avatar-image">
-                    </div>
-                    <h1>Hello, <span id="heading-name">Anonymous</span>!</h1>
-                    <p class="lead">
-                        <a href="#" class="btn btn-primary btn-lg" id="signout-button">
-                            Logout
-                        </a>
-                    </p>
-                </div>
-                <!--<div class="End Sign-out Button">-->
             </div>
             <!--<div class="End Row">-->
+
+            <!--<div class="Sign-In Button">-->
+            <div class="span8" id="section-2">
+                <p class="lead">
+                    <a href="#" class="btn btn-primary btn-lg" id="signin-button">
+                        Sign In with Blockstack
+                    </a>
+                </p>
+            </div>
+            <!--<div class="End Sign-In Button">-->
+
+            <!--<div class="Sign-out Button">-->
+            <div class="span8 hide" id="section-3">
+                <div class="avatar-section">
+                    <img src="https://s3.amazonaws.com/onename/avatar-placeholder.png" class="img-rounded avatar" id="avatar-image">
+                </div>
+                <h1>Hello, <span id="heading-name">Anonymous</span>!</h1>
+                <p class="lead">
+                    <a href="#" class="btn btn-primary btn-lg" id="signout-button">
+                        Logout
+                    </a>
+                </p>
+            </div>
+            <!--<div class="End Sign-out Button">-->
         </div>
         <!--<div class="End Container">-->
 
