Removed duplicate <div> elements in index.html and added section closing tag.

--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,9 @@
         <div class="container">
 
             <!--<div class="Row">-->
-            <div class="row" id="section-1">
+            <div class="span8" id="section-1">
 
                 <!--<div class="Carousel">-->
-                <section class="col-sm-8">
                     <div class="carousel slide" id="feature" data-ride="carousel" data-interval="false">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -47,7 +46,6 @@
                             <span class="sr-only">Next</span>
                         </span>
                     </a>
-                </section>
                 <!--<div class="End Carousel">-->
             </div>
             <!--<div class="End Row">-->
