Removed duplicate <div> elements in index.html and added section closing tag.

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <!--<div class="Container">-->
-        <div class="container">
+        <div class="container" align="center">
 
             <!--<div class="Row">-->
             <div class="span8" id="section-1">
