--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Notarius</title>
         <link rel="stylesheet" href="bootstrap.min.css" />
-        <link rel="stylesheet" href="app.css" />
+        <!--<link rel="stylesheet" href="app.css" />-->
         <link rel="shortcut icon" type="image/png" href="img/Notary.png"/>
         <script src="bundle.js"></script>
         <script src="app.js"></script>
