--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,10 @@
     </head>
     <body>
         <!--<div class="Container">-->
-        <div class="container" align="center">
+        <div class="jumbotron" align="center">
 
             <!--<div class="Row">-->
-            <div class="span8" id="section-1">
+            <div class="col-md-12" id="section-1">
 
                 <!--<div class="Carousel">-->
                     <div class="carousel slide" id="feature" data-ride="carousel" data-interval="false">
@@ -51,7 +51,7 @@
             <!--<div class="End Row">-->
 
             <!--<div class="Sign-In Button">-->
-            <div class="span8" id="section-2">
+            <div class="col-md-12" id="section-2">
                 <p class="lead">
                     <a href="#" class="btn btn-primary btn-lg" id="signin-button">
                         Sign In with Blockstack
@@ -61,7 +61,7 @@
             <!--<div class="End Sign-In Button">-->
 
             <!--<div class="Sign-out Button">-->
-            <div class="span8 hide" id="section-3">
+            <div class="col-md-12" id="section-3">
                 <div class="avatar-section">
                     <img src="https://s3.amazonaws.com/onename/avatar-placeholder.png" class="img-rounded avatar" id="avatar-image">
                 </div>
