--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <!--<div class="Container">-->
-        <div class="col-md-8" align="center">
+        <div class="row" align="center">
 
             <!--<div class="Row">-->
             <div class="col-md-8" id="section-1">
